--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="planner">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planner</title>
 </head>
-<body>
-    <h1>Planner</h1>
+<body>  
 
-    <input ng-model="test">
-    {{test}}
-
-
-
-
-
+    <div ng-view></div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>   
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+    <script src="app.js"></script>
+    <script src="/controllers/ProjectCtrl.js"></script>
+    <script src="/controllers/DashboardCtrl.js"></script>
 </body>
 </html>
